--- a/nginx/conf.d/nextcloud.conf
+++ b/nginx/conf.d/nextcloud.conf
@@ -27,6 +27,9 @@ server {
            proxy_set_header X-Forwarded-Proto https;
            proxy_set_header X-Nginx-Proxy true;
            proxy_buffering off;
+           proxy_connect_timeout 90;
+           proxy_send_timeout 600;
+           proxy_read_timeout 600;
        }
 
        include /etc/nginx/ssl.conf;
