--- a/nextcloud-post.yaml
+++ b/nextcloud-post.yaml
@@ -8,7 +8,7 @@
     - name: Use https instead of http
       lineinfile:
         path: "{{ base_directory }}/nextcloud/html/config/config.php"
-        regexp: "^\'overwriteprotocol.(*)$"
+        regexp: "^'overwriteprotocol.(*)$"
         line: "'overwriteprotocol' => 'https'"
         backrefs: yes
     - name: Restart nextcloud for changes to take effect
