--- a/docker-compose/network.yaml
+++ b/docker-compose/network.yaml
@@ -4,18 +4,18 @@ services:
      networks:
        nginx:
        drive:
-         ipv4_address: 192.168.10.3
+         ipv4_address: ${NGINX_IP}
 #===================================
    db:
      networks:
        drive:
-         ipv4_address: 192.168.10.4
+         ipv4_address: ${DB_IP}
 #===================================
    app:
      networks:
        nextcloud:
        drive:
-         ipv4_address: 192.168.10.5
+         ipv4_address: ${APP_IP}
 #===================================
  
  
@@ -31,4 +31,4 @@ networks:
      ipam:
        driver: default
        config:
-         - subnet: 192.168.10.0/24
+         - subnet: ${PRIVATE_SUBNET}
