--- a/vars.yaml
+++ b/vars.yaml
@@ -16,13 +16,15 @@ non_secret_vars:
 
 letsencrypt_email: devops@xaas.ir
 
+virtual_host: test-next.arman-projects.com
+
 cert_files:
   - original: fullchain1.pem
     renamed: cert.pem
   - original: privkey1.pem
     renamed: key.pem
 
-private_ip_subnet: 192.168.1.0/24
+private_ip_subnet: 192.168.10.0/24
 
 private_ip_addr:
   - svc: NGINX
