--- a/nginx/ssl.conf
+++ b/nginx/ssl.conf
@@ -1,7 +1,6 @@
     ssl_certificate           certs/cert.pem;
     ssl_certificate_key       certs/key.pem;
-    ssl_trusted_certificate   certs/cert.pem;
-    ssl_dhparam               certs/dhparam.pem; # Score=90 (recommended)
+    ssl_dhparam               certs/dhparam.pem;
     ssl_ecdh_curve     secp384r1;
  
     ssl_session_cache shared:SSL:50m;
