--- a/nginx/ssl.conf
+++ b/nginx/ssl.conf
@@ -1,4 +1,5 @@
     ssl_certificate           certs/cert.pem;
+    ssl_trusted_certificate   certs/cert.pem;
     ssl_certificate_key       certs/key.pem;
     ssl_dhparam               certs/dhparam.pem;
     ssl_ecdh_curve     secp384r1;
