--- a/nextcloud-pre.yaml
+++ b/nextcloud-pre.yaml
@@ -1,4 +1,4 @@
---- # This is an Ansible script to deploy nextcloud on a desired number of machines before initializing web.
+--- # This is an Ansible script to deploy nextcloud on a desired number of machines before initializing via Web UI.
 
 - hosts: all
   user: root
